Actualizacion con Descompresion

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Unityproy.loader.js";
+      var loaderUrl = buildUrl + "/UnityyProyyy.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Unityproy.data.gz",
-        frameworkUrl: buildUrl + "/Unityproy.framework.js.gz",
-        codeUrl: buildUrl + "/Unityproy.wasm.gz",
+        dataUrl: buildUrl + "/UnityyProyyy.data",
+        frameworkUrl: buildUrl + "/UnityyProyyy.framework.js",
+        codeUrl: buildUrl + "/UnityyProyyy.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Input_System",
